# kwork-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: improvements.md
src/kwork_mcp/: __init__.py  __main__.py  config.py  errors.py  rate_limiter.py  server.py  session.py  utils.py
src/kwork_mcp/tools/: __init__.py  categories.py  dialogs.py  kworks.py  notifications.py  offers.py  orders.py  profile.py  projects.py
tests/: conftest.py  test_config.py  test_errors.py  test_rate_limiter.py  test_session.py  test_tools.py  test_utils.py
