[project]
name = "kwork-mcp"
version = "0.1.0"
description = "MCP server for managing Kwork freelance marketplace"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.20",
    "kwork>=0.2.0",
    "pydantic-settings>=2.7",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[project.scripts]
kwork-mcp = "kwork_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kwork_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "T20", "RUF", "ASYNC"]
ignore = ["RUF001", "RUF002", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
