[project]
name = "kwork-mcp"
version = "0.2.1"
description = "MCP server for managing Kwork freelance marketplace"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Simon Sudarushkin", email = "simonsudarushkin@gmail.com" },
]
keywords = ["mcp", "kwork", "freelance", "claude", "mcp-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.1,<4",
    "kwork>=0.2.0,<1",
    "pydantic-settings>=2.7,<3",
    "loguru>=0.7,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
]

[project.scripts]
kwork-mcp = "kwork_mcp:main"

[project.urls]
Homepage = "https://github.com/simonether/kwork-mcp"
Repository = "https://github.com/simonether/kwork-mcp"
Issues = "https://github.com/simonether/kwork-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kwork_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "T20", "RUF", "ASYNC"]
ignore = ["RUF001", "RUF002", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
